--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,16 @@
 {
-    "version": 2,
+    "version":2,
     "builds": [
-      { "src": "app.py", "use": "@vercel/python", "config": {  "runtime": "python3.9" }}
+        {
+            "src":"./app.py",
+            "use": "@vercel/python",
+            "config":{"runtime":"python3.10"}
+        }
     ],
     "routes": [
-      { "src": "/(.*)", "dest": "/app.py" }
+        {
+            "src":"/(.*)",
+            "dest":"/"
+        }
     ]
-  }
-  
+}
